[gd_scene load_steps=8 format=3 uid="uid://cij30g4pco8e6"]

[ext_resource type="Script" uid="uid://cugnb538jimh6" path="res://scenes/pause_menu.gd" id="1_n87rw"]
[ext_resource type="FontFile" uid="uid://ds2i1a7df0x" path="res://fonts/PixelOperator8-Bold.ttf" id="2_1s2dm"]
[ext_resource type="PackedScene" uid="uid://dueehkt18k7a" path="res://scenes/OptionMenu.tscn" id="2_myx47"]
[ext_resource type="Texture2D" uid="uid://br6tp4vxyvnf3" path="res://Images/SettingButton.png" id="3_7l7mv"]
[ext_resource type="FontFile" uid="uid://cfa7p1sv8wflj" path="res://fonts/PixelOperator8.ttf" id="3_88e76"]
[ext_resource type="Texture2D" uid="uid://1uiik6jwgj6p" path="res://Images/SettingButtonPressed.png" id="4_v4r4p"]
[ext_resource type="Texture2D" uid="uid://raybo634gv7c" path="res://Images/SettingButtonHover.png" id="5_1s2dm"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="ColorRect" type="ColorRect" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -957.0
offset_top = -540.0
offset_right = 961.0
offset_bottom = 541.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0.705882)

[node name="GridContainer" type="GridContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 16

[node name="Label" type="Label" parent="GridContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1s2dm")
theme_override_font_sizes/font_size = 32
text = "Paused"

[node name="Resume" type="Button" parent="GridContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("3_88e76")
text = "Resume
"

[node name="Restart" type="Button" parent="GridContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("3_88e76")
text = "Restart"

[node name="Quit" type="Button" parent="GridContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("3_88e76")
text = "Quit"

[node name="OptionMenu" parent="." instance=ExtResource("2_myx47")]
visible = false
layout_mode = 1

[node name="SettingsButton" type="TextureButton" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(192, 192)
layout_mode = 0
offset_left = 688.0
offset_top = -320.0
offset_right = 880.0
offset_bottom = -128.0
size_flags_horizontal = 4
texture_normal = ExtResource("3_7l7mv")
texture_pressed = ExtResource("4_v4r4p")
texture_hover = ExtResource("5_1s2dm")
stretch_mode = 5

[connection signal="pressed" from="GridContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="GridContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GridContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
